--- a/website/site-static/sass/apps/_collector.sass
+++ b/website/site-static/sass/apps/_collector.sass
@@ -41,6 +41,13 @@ $popup-width: 280px
       height: $popup-height - 70px
       //max-height: 200px !important
       // width: 200px
+
+      p.notice
+        color: white
+        text-align: center
+        padding-top: 20px
+
+
       .pane
         background: #444
 
