--- a/website/site-static/sass/asite/_ac-tagging.sass
+++ b/website/site-static/sass/asite/_ac-tagging.sass
@@ -41,6 +41,13 @@ ul.tagit
       background: none
       background-color: #DDFFD9
       color: #555
+
+      // experimental - override
+      border: 1px solid #444
+      background: none
+      background-color: #333
+      color: #fff
+
       font-weight: normal
       a.tagit-label
         cursor: pointer
