--- a/website/site-static/sass/element/_listview.sass
+++ b/website/site-static/sass/element/_listview.sass
@@ -447,7 +447,7 @@
         li
           float: left
       .c2
-        small.type
+        small.type, small.tempo
           font-weight: normal
           font-size: 90%
       .c3
