--- a/website/apps/abcast/templates/abcast/schedule.html
+++ b/website/apps/abcast/templates/abcast/schedule.html
@@ -4,11 +4,14 @@
 
 
 
+{# block heading #}
+    {% with page_title=channel.name %}
+        {{ block.super }}
+    {% endwith %}
+{# endblock #}
+
+
 {% block modnav %}
-
-
-
-
 {{ block.super }}
 {% endblock %}
 
@@ -78,7 +81,26 @@ $(function () {
 
 
 {% block sidebar %}
-{{ block.super }}
+
+    <!-- channel selector -->
+    <div id="channel_selection" class="holder-selection">
+    <h4>{% trans "Channel selection" %}</h4>
+    <ul class="unstyled">
+    {% for c in channels %}
+    <li class="channel {% if channel.pk == c.pk %}active{% endif %}">
+        <ul class="unstyled hoverable">
+            <li><a href="{% url abcast-schedule %}?channel_id={{ c.pk }}">{{ c.name }}</a></li>
+            <li>{% trans "Station" %}: {{ c.station.name }}</li>
+        </ul>
+
+
+    </li>
+    {% endfor %}
+    </ul>
+    </div>
+
+
+{# block.super #}
 <div id="container_selection" class="holder-selection"></div>
 {% endblock %}
 
