--- a/website/apps/alibrary/templates/alibrary/media/_list_item_xs.html
+++ b/website/apps/alibrary/templates/alibrary/media/_list_item_xs.html
@@ -56,7 +56,12 @@
                     {% if item.country %}({{ item.country }}){% endif %}
                     {% topflop_for_object item %} </a>
 
+                <!--
                 <small class="type">{{ item.get_mediatype_display }}</small>
+                -->
+                {% if item.tempo %}
+                    <small class="tempo">{{ item.tempo }} BPM</small>
+                {% endif %}
             </li>
 
         </ul>
