--- a/website/apps/alibrary/templates/alibrary/media_detail.html
+++ b/website/apps/alibrary/templates/alibrary/media_detail.html
@@ -17,6 +17,13 @@
                 detail_player = new DetailPlayer;
                 detail_player.dom_id = 'aplayer_detail';
                 detail_player.api_url = '{{ object.get_api_url }}';
+
+                // passing permissions (only for display, handling of perms in api/views)
+                detail_player.perms = {
+                    'play': {% if perms.alibrary.play_media %}true{% else %}false{% endif %},
+                    'add': {% if user.is_authenticated %}true{% else %}false{% endif %}
+                }
+
                 detail_player.init();
 
                 window.detail_player = detail_player;
@@ -48,22 +55,8 @@
             {% include "alibrary/media/_detail_info.html" %}
         </div>
 
-        <!--
-		<div class="row-fluid">
-
-		<div class="span12">
-
-		<div  id="waveform" style="background: #a5a5a5; width: 100%; height: 50px;">
-		<img src="{{ object.get_waveform_url }}" style="height: 50px; width: 100%;"></img>
-
-		</div>
-		</div>
-
-		</div>
-		-->
-
         <div id="aplayer_detail" style="padding-left: 10px; margin-top: 10px;">
-            {% trans "Loading player" %}
+            <p class="notice">{% trans "Loading player" %}</p>
         </div>
 
     </section>
@@ -161,21 +154,58 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td>{{ object.tempo }}</td>
-                            <td>{{ object.loudness }}</td>
-                            <td>{{ object.key }}</td>
+                            <td class="value">{{ object.tempo }}</td>
+                            <td class="value">{{ object.loudness }}</td>
+                            <td class="value">{{ object.key }}</td>
 
-                            <td>
-
-
-                                {{ object.danceability }}
-
-
+                            <td class="bar">
+                                {% if object.danceability %}
+                                <div class="holder">
+                                    <div class="indicator" style="width: {{ object.danceability|multiply:100 }}%">
+                                        <span>{{ object.danceability|multiply:100|roundint }}%</span>
+                                    </div>
+                                </div>
+                                {% else %}
+                                <span class="na">-</span>
+                                {% endif %}
                             </td>
 
-                            <td>{{ object.energy }}</td>
-                            <td>{{ object.liveness }}</td>
-                            <td>{{ object.speechiness }}</td>
+                            <td class="bar">
+                                {% if object.energy %}
+                                <div class="holder">
+                                    <div class="indicator" style="width: {{ object.energy|multiply:100 }}%">
+                                        <span>{{ object.energy|multiply:100|roundint }}%</span>
+                                    </div>
+                                </div>
+                                {% else %}
+                                <span class="na">-</span>
+                                {% endif %}
+                            </td>
+
+                            <td class="bar">
+                                {% if object.liveness %}
+                                <div class="holder">
+                                    <div class="indicator" style="width: {{ object.liveness|multiply:100 }}%">
+                                        <span>{{ object.liveness|multiply:100|roundint }}%</span>
+                                    </div>
+                                </div>
+                                {% else %}
+                                <span class="na">-</span>
+                                {% endif %}
+                            </td>
+
+                            <td class="bar">
+                                {% if object.speechiness %}
+                                <div class="holder">
+                                    <div class="indicator" style="width: {{ object.speechiness|multiply:100 }}%">
+                                        <span>{{ object.speechiness|multiply:100|roundint }}%</span>
+                                    </div>
+                                </div>
+                                {% else %}
+                                <span class="na">-</span>
+                                {% endif %}
+                            </td>
+
                         </tr>
                         </tbody>
                     </table>
