--- a/website/apps/profiles/templates/profiles/profile_detail.html
+++ b/website/apps/profiles/templates/profiles/profile_detail.html
@@ -1,6 +1,6 @@
 {% extends "layout_base.html" %}
 
-{% load truncate i18n thumbnail arating_tags markup wiki_tags sekizai_tags activity_tags spurl %}
+{% load truncate i18n thumbnail arating_tags markup wiki_tags sekizai_tags activity_tags atracker_tags spurl %}
 
 {% block heading %}
     <!-- heading / icon (large one) -->
@@ -243,6 +243,12 @@
 
 
     <div class="tab-pane" id="activities">
+
+
+
+        {# stats_for_user object.user #}
+
+
         <table class="table table-condensed striped action">
             <tbody>
 
