--- a/website/site-static/sass/_wip.sass
+++ b/website/site-static/sass/_wip.sass
@@ -1,9 +1,15 @@
 // WORK IN PROGRESS FILE - FOR FASTER PROCESSING
+@import "compass/utilities/general/clearfix"
+@import vars
+@import site/variables
 
-
+// forms
+@import asite/forms_extra
+//
 @import element/listview
 @import element/itemview
 @import apps/atracker
 @import apps/markdown
 @import apps/postman
+@import apps/lookup
 @import element/sidebar
