--- a/website/site-static/sass/apps/_base.sass
+++ b/website/site-static/sass/apps/_base.sass
@@ -4,7 +4,7 @@
 @import apps/notification
 @import apps/shortcutter
 @import apps/on_air
-@import apps/lookup
+//wip @import apps/lookup
 @import apps/selectable
 @import apps/alibrary
 @import apps/collector
