--- a/website/site-static/sass/apps/_postman.sass
+++ b/website/site-static/sass/apps/_postman.sass
@@ -116,3 +116,36 @@
         border: none
         background-color: #f2f2f2
 
+    div.actions
+      padding-right: 30px
+      button
+        width: 160px
+
+
+// also styled here... invitations:
+
+.invitation
+
+  form
+    padding: 5px 0
+
+    label
+      font-weight: bold
+      width: 120px
+      float: left
+
+    fieldset
+      clear: both
+
+      input, textarea
+        font-family: monospace
+        width: 680px
+        border: none
+        background-color: #f2f2f2
+
+    div.actions
+      padding-right: 30px
+      button
+        width: 160px
+
+
