--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -334,6 +334,12 @@
 </script>
 
 
+<!--
+<button onclick="TogetherJS(this); return false;">Start TogetherJS</button>
+<script src="https://togetherjs.com/togetherjs-min.js"></script>
+-->
+
+
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
