--- a/website/apps/alibrary/templates/alibrary/playlist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_edit.html
@@ -5,175 +5,177 @@
 {% load thumbnail i18n truncate alibrary_tags abcast_tags %}
 
 {% block heading %} <!-- heading / icon (large one) -->
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}selectable/js/jquery.dj.selectable.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/jquery.tag-it.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}dajax/jquery.dajax.core.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}selectable/js/jquery.dj.selectable.js"></script>
+    {% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/jquery.tag-it.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}dajax/jquery.dajax.core.js"></script>{% endaddtoblock %}
 
 
-{% addtoblock "js-post" %}
-<script>
-	$(function(){
-		
-		
-		$('.target-duration input:checked').parent().addClass("selected");
-		$('.target-duration input').css('display', 'none');
-		$('.target-duration input').live('change', function(e){
-			$('.target-duration label').removeClass('selected');
-			$(this).parents('label').addClass('selected');
-		});
-		
-		
-		$('.weather input:checked').parent().addClass("selected");
-		$('.weather input').css('display', 'none');
-		$('.weather input').live('change', function(e){
-			//$('.weather label').removeClass('selected');
-			$(this).parents('label').toggleClass('selected');
-		});
-		
-		
-		$('.seasons input:checked').parent().addClass("selected");
-		$('.seasons input').css('display', 'none');
-		$('.seasons input').live('change', function(e){
-			//$('.seasons label').removeClass('selected');
-			$(this).parents('label').toggleClass('selected');
-		});
-		
-		
-		
-		$('.dayparts input:checked').parents('li').addClass("selected");
-		$('.dayparts input').css('display', 'none');
+    {% addtoblock "js-post" %}
+        <script>
+            $(function () {
 
-		$('.dayparts input').live('click', function(e){
-			$(this).parents('li').toggleClass('selected');
-		});
-		
-		
-		
-	});
-</script>
-{% endaddtoblock %}
 
-<div id="heading">
-	{% include "skeleton/heading.html" %}
-</div>
-<!-- heading / icon (large one) -->
+                /**/
+                $('.target-duration input:checked').parent().addClass("selected");
+                $('.target-duration input').css('display', 'none');
+                $('.target-duration input').live('change', function (e) {
+                    {% if object.type == "broadcast" %}
+                        e.preventDefault();
+                        return;
+                    {% else %}
+                        $('.target-duration label').removeClass('selected');
+                        $(this).parents('label').addClass('selected');
+                    {% endif %}
+                });
+
+
+                $('.weather input:checked').parent().addClass("selected");
+                $('.weather input').css('display', 'none');
+                $('.weather input').live('change', function (e) {
+                    $(this).parents('label').toggleClass('selected');
+                });
+
+
+                $('.seasons input:checked').parent().addClass("selected");
+                $('.seasons input').css('display', 'none');
+                $('.seasons input').live('change', function (e) {
+                    $(this).parents('label').toggleClass('selected');
+                });
+
+
+                $('.dayparts input:checked').parents('li').addClass("selected");
+                $('.dayparts input').css('display', 'none');
+                $('.dayparts input').live('click', function (e) {
+                    $(this).parents('li').toggleClass('selected');
+                });
+
+
+            });
+        </script>
+    {% endaddtoblock %}
+
+    <div id="heading">
+        {% include "skeleton/heading.html" %}
+    </div>
+    <!-- heading / icon (large one) -->
 {% endblock %}
 
 {% block modnav %} <!-- start: intra-module navigation -->
-<div id="modnav">
-	{% include "skeleton/modnav.html" %}
-</div>
-<!-- end: intra-module navigation -->
+    <div id="modnav">
+        {% include "skeleton/modnav.html" %}
+    </div>
+    <!-- end: intra-module navigation -->
 {% endblock %}
 
 {% block inner %}
-<div class="item_detail" style="">
+    <div class="item_detail" style="">
 
-	<section class="shaded">
-		<div class="row iteminfo playlist">
-			{% include "alibrary/playlist/_detail_info.html" %}
-		</div>
-	</section>
+        <section class="shaded">
+            <div class="row iteminfo playlist">
+                {% include "alibrary/playlist/_detail_info.html" %}
+            </div>
+        </section>
 
-	<div class="item_menu" id="item_menu"></div>
+        <div class="item_menu" id="item_menu"></div>
 
-	<div class="clear"></div>
+        <div class="clear"></div>
 
-</div>
+    </div>
 {% endblock %}
 
 {% block sidebar %}
-{% include "alibrary/playlist/sidebar/_edit.html" %}
+    {% include "alibrary/playlist/sidebar/_edit.html" %}
 {% endblock %}
 
 {% block form %}
-<div class="item_inner">
-	
-	<div class="item_menu" id="item_menu">
-		<ul class="nav nav-tabs">
-			<li class="active">
-				<a href="#metadata" data-toggle="tab">{% trans "Medtadata" %}</a>
-			</li>
-			<li>
-				<a href="#tracklist_editor" data-toggle="tab">{% trans "Tracklist Editor" %}</a>
-			</li>
+    <div class="item_inner">
 
-		</ul>
-	</div>
-	
-	<div class="clear"></div>
-	
-	<section class="tabs">
-		
-		<div class="tab-content">
+        <div class="item_menu" id="item_menu">
+            <ul class="nav nav-tabs">
+                <li class="active">
+                    <a href="#metadata" data-toggle="tab">{% trans "Medtadata" %}</a>
+                </li>
+                <li>
+                    <a href="#tracklist_editor" data-toggle="tab">{% trans "Tracklist Editor" %}</a>
+                </li>
 
-			<div class="tab-pane active" id="metadata">
-				
-				<form class="form-horizontal form-compact form-playlist" method="post" id="" enctype="multipart/form-data">
-			
-					{{ form.management_form }}
-					{{ releasemedia_form.management_form }}
-					{# crispy action_form #}
-					{% crispy form %}
-					{# crispy action_form #}
-					{# crispy permission_form #}
-					{% crispy action_form %}
-					
-				</form>
-				
-			</div>
+            </ul>
+        </div>
 
-			<div class="tab-pane" id="tracklist_editor">
+        <div class="clear"></div>
 
-				{% if object.type == "broadcast"  %}
+        <section class="tabs">
 
-					<div class="alert alert-info">
+            <div class="tab-content">
 
-					  <h4><i class="icon-lock"></i> {% trans "Playlist editing locked" %}</h4>
-					  {% blocktrans %}
-					  This broadcast has already ben sheduled or played. To edit this tracklist you will have to convert this broadcast to a playlist.
-					  {% endblocktrans %}
-					</div>
+                <div class="tab-pane active" id="metadata">
 
-				{% endif %}
+                    <form class="form-horizontal form-compact form-playlist"
+                          method="post"
+                          id=""
+                          enctype="multipart/form-data">
 
-                {% include "alibrary/playlist/_tracklist_editor.html" %}
+                        {{ form.management_form }}
+                        {{ releasemedia_form.management_form }}
+                        {# crispy action_form #}
+                        {% crispy form %}
+                        {# crispy action_form #}
+                        {# crispy permission_form #}
+                        {% crispy action_form %}
 
+                    </form>
 
+                </div>
 
+                <div class="tab-pane" id="tracklist_editor">
 
+                    {% if object.type == "broadcast" %}
 
+                        <div class="alert alert-info">
 
-			</div>
-			
-			
-			
-		</div>
-		
-	</section>
-		
+                            <h4><i class="icon-lock"></i> {% trans "Playlist editing locked" %}</h4>
+                            {% blocktrans %}
+                                This broadcast has already ben sheduled or played. To edit this tracklist you will have
+                                to convert this broadcast to a playlist.
+                            {% endblocktrans %}
+                        </div>
+
+                    {% endif %}
+
+                    {% include "alibrary/playlist/_tracklist_editor.html" %}
 
 
-	
+                </div>
 
 
-</div>
+            </div>
+
+        </section>
+
+
+    </div>
 {% endblock %}
 
 {% block form_sidebar %}
 
-<div class="sidebar form-sidebar holder">
-	{% include "alibrary/playlist/sidebar/_edit_transform.html" %}
-</div>
+    <div class="sidebar form-sidebar holder">
 
-<div class="sidebar holder">
-	{% playlists_inline %}
-</div>
+        {% include "alibrary/playlist/sidebar/_edit_transform.html" %}
 
-<div class="sidebar holder">
-	{% jingles_inline %}
-</div>
+    </div>
+
+    <div class="sidebar holder">
+        {% playlists_inline %}
+    </div>
+
+    <div class="sidebar holder">
+        {% jingles_inline %}
+    </div>
 
 {% endblock %}
 
