--- a/website/apps/profiles/templates/profiles/profile/sidebar/_edit_transform.html
+++ b/website/apps/profiles/templates/profiles/profile/sidebar/_edit_transform.html
@@ -20,7 +20,7 @@
 	<div class="set">
 		<ul class="unstyled">
 
-			<li class="action {% if not object.mentor %}disabled{% endif %} selection_single convert_broadcast">
+			<li class="action {% if not object.mentor %}disabled{% endif %} selection_single">
 				<span class="left icon"><a href="{% url postman_write object.mentor.username %}?subject={% trans "Please review my profile" %}" title="{% trans "Request a profile-review" %}"><i class="icon-unlock"></i> {% trans "Request a profile-review" %}</a> </span>
 				<span class="opt"></span>
 				<span class="clear"></span>
@@ -50,7 +50,7 @@
 	{% endif %}
 
 	
-	<div class="sommary-holder">
+	<div class="summary-holder">
 	
 	</div>
 
