--- a/website/apps/alibrary/templates/alibrary/artist/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/artist/_detail_info.html
@@ -60,11 +60,13 @@
 		<dt>
 			{% trans "Variations" %}:
 		</dt>
-		<dd>
+		<dd class="limit" data-limit="5">
 			{% for name in object.namevariations.all %}
-            {{ name }}
-			{% if not forloop.last %},{% endif %}
+            <span {% if forloop.counter0 > 5 %}style="display: none;" class="limited"{% endif %}>{{ name }}{% if not forloop.last %},{% endif %}</span>
 			{% endfor %}
+            {% if object.namevariations.count > 5%}
+                <a href="#" class="toggle">{% trans "Show all" %} ({{ object.namevariations.count }})</a>
+            {% endif %}
 		</dd>
 		{% endif %}
 
