--- a/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
@@ -32,14 +32,18 @@
 
                         <a href="{{ item.get_absolute_url }}" title="{{ item.name }}">
                             {{ item.name|truncate_chars_inner:24 }}
-
+                            {% if item.country %}({{ item.country.iso2_code }}){% endif %}
                             {% topflop_for_object item %} </a>
                     </li>
 
                     <li>
-                        {% if item.country %}
-                            {{ item.country }}
+                        {% if item.type %}
+                            {{ item.type }}
                         {% endif %}&nbsp;
+                        <span class="life">
+                            {% if item.date_start %}&nbsp;*{{ item.date_start.year }}{% endif %}
+                            {% if item.date_end %}&nbsp;&#10013;{{ item.date_end.year }}{% endif %}
+                        </span>
                         <!--
                         {% if item.disambiguation %}
                             {{ item.disambiguation }}
