--- a/website/apps/alibrary/templates/alibrary/artist/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_s.html
@@ -14,12 +14,20 @@
 			<li class="bold">
 				<a href="{{ item.get_absolute_url }}" title="{{ item.name }}">
 				{{ item.name|truncate_chars_inner:24 }}
-				{% if item.country %}({{ item.country }}){% endif %}
+				{% if item.country %}({{ item.country.iso2_code }}){% endif %}
 				{% topflop_for_object item %} </a>
 			</li>
-			{% if item.type %}
-			<li>{{ item.type }}</li>
-			{% endif %}
+
+			<li>
+
+                {% if item.type %}{{ item.type }}{% endif %}
+
+                <span class="life">
+                    {% if item.date_start %}&nbsp;*{{ item.date_start.year }}{% endif %}
+                    {% if item.date_end %}&nbsp;&#10013;{{ item.date_end.year }}{% endif %}
+                </span>
+            </li>
+
 		</ul>
 	</div>
 
