--- a/website/apps/alibrary/templates/alibrary/label/sidebar/_list.html
+++ b/website/apps/alibrary/templates/alibrary/label/sidebar/_list.html
@@ -1,8 +1,7 @@
 {% load spurl %}
 
 {% include "alibrary/label/sidebar/context/_list.html" %}
-
-{# include "alibrary/label/sidebar/_ordering.html" #}
+{% include "alibrary/element/sidebar/_ordering.html" %}
 {% include "alibrary/label/sidebar/_filter.html" %}
 
 
