reworking background processes

--- a/website/site-static/css/aplayer.css
+++ b/website/site-static/css/aplayer.css
@@ -11771,63 +11771,67 @@ i.ajax-loader.c3CA3B9 {
   background-image: url(/static/img/icons/loader/loader.3CA3B9.gif);
 }
 
-/* line 275, ../sass/apps/_importer.sass */
+/* line 272, ../sass/apps/_importer.sass */
+.import.summary {
+  margin-top: 20px;
+}
+/* line 277, ../sass/apps/_importer.sass */
 .import.summary.listing.fixed {
   position: fixed;
   width: 260px;
   top: 120px;
 }
-/* line 280, ../sass/apps/_importer.sass */
+/* line 282, ../sass/apps/_importer.sass */
 .import.summary .item {
   padding: 4px 4px 4px 4px;
   margin: 5px 0 5px 0;
   border-bottom: 1px solid #efefef;
 }
-/* line 286, ../sass/apps/_importer.sass */
+/* line 288, ../sass/apps/_importer.sass */
 .import.summary .item a.toggle {
   color: #333333;
 }
-/* line 288, ../sass/apps/_importer.sass */
+/* line 290, ../sass/apps/_importer.sass */
 .import.summary .item a.toggle:hover {
   text-decoration: none;
 }
-/* line 294, ../sass/apps/_importer.sass */
+/* line 296, ../sass/apps/_importer.sass */
 .import.summary .item.hover.done {
   background-color: #ddffd9;
 }
-/* line 297, ../sass/apps/_importer.sass */
+/* line 299, ../sass/apps/_importer.sass */
 .import.summary .item.hover.duplicate {
   background-color: #ddffd9;
 }
-/* line 300, ../sass/apps/_importer.sass */
+/* line 302, ../sass/apps/_importer.sass */
 .import.summary .item.hover.ready {
   background-color: #ddffd9;
 }
 
-/* line 307, ../sass/apps/_importer.sass */
+/* line 309, ../sass/apps/_importer.sass */
 .popover .popover-content {
   padding: 8px;
   background: #333333;
   color: white;
 }
-/* line 311, ../sass/apps/_importer.sass */
+/* line 313, ../sass/apps/_importer.sass */
 .popover .popover-content img {
   width: 70px;
   height: 70px;
 }
-/* line 314, ../sass/apps/_importer.sass */
+/* line 316, ../sass/apps/_importer.sass */
 .popover .popover-content h1 {
   line-height: 100%;
   color: white;
   margin-bottom: 8px !important;
 }
-/* line 318, ../sass/apps/_importer.sass */
+/* line 320, ../sass/apps/_importer.sass */
 .popover .popover-content .alert {
   margin-bottom: 0px;
   margin-top: 8px;
 }
 
-/* line 322, ../sass/apps/_importer.sass */
+/* line 324, ../sass/apps/_importer.sass */
 span.dim {
   background: transparent;
   color: #a3a3a3;
