--- a/website/apps/abcast/templates/abcast/layout/_calendar.html
+++ b/website/apps/abcast/templates/abcast/layout/_calendar.html
@@ -1,13 +1,32 @@
-{% load i18n calc %}
+{% load i18n calc spurl %}
 
 <div id="mainbody" class="printAlignLeft" style="">
-	
+
 	<div id="gridcontainer" class="" style="overflow-y: visible; height: 1031px; /* height: 431px; */">
+
+
+        <div id="scheduler_navigation">
+            <ul class="horizontal unstyled clearfix">
+
+                <li>
+                    <a href="{% spurl base=request.get_full_path trigger_query="days_offset={{ days_offset|subtract:28 }}" %}"><i class="icon-angle-left"></i><i class="icon-angle-left"></i><small>{% trans "Previous Month" %}</small></a>
+                    <a href="{% spurl base=request.get_full_path trigger_query="days_offset={{ days_offset|subtract:7 }}" %}"><i class="icon-angle-left"></i><small>{% trans "Previous Week" %}</small></a>
+                </li>
+
+                <li class="week-number">{% trans "Week" %} {{ range_start.isocalendar.1 }}, {{ range_start|date:"F Y" }}</li>
+                <li class="pull-right">
+                    <a href="{% spurl base=request.get_full_path trigger_query="days_offset={{ days_offset|add:7 }}" %}"><i class="icon-angle-right"></i><small>{% trans "Next Week" %}</small></a>
+                    <a href="{% spurl base=request.get_full_path trigger_query="days_offset={{ days_offset|add:28 }}" %}"><i class="icon-angle-right"></i><i class="icon-angle-right"></i><small>{% trans "Next Month" %}</small></a>
+                </li>
+            </ul>
+        </div>
+
+
 		<div idx="topcontainerwk" id="top_container">
 			<!--
 			<div class="placeholder" style="height: 23px;"></div>
 			-->
-			
+
 			<table class="wk-weektop wk-full-mode" cellpadding="0" cellspacing="0">
 				<tbody>
 					<tr class="wk-daynames">
@@ -23,6 +42,7 @@
 							{% endif %}
 							<ul class="unstyled horizontal day-actions">
 								{% if date > today %}
+								<li><a href="#" data-action="delete" data-date="{{ date|date:"Y-m-d" }}" title="{% trans "Delete day" %}"><i class="icon-trash"></i></a></li>
 								<li><a href="#" data-action="paste" data-date="{{ date|date:"Y-m-d" }}" title="{% trans "Paste day" %}"><i class="icon-paste"></i></a></li>
 								{% endif %}
 								<li><a href="#" data-action="copy" data-date="{{ date|date:"Y-m-d" }}" title="{% trans "Copy day" %}"><i class="icon-copy"></i></a></li>
@@ -44,147 +64,147 @@
 							<div class="tg-spanningwrapper">
 								<div class="tg-hourmarkers">
 
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker-limit">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker-limit">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									
-									<div class="tg-markercell marker-limit">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker-limit">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker-limit">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
-									<div class="tg-markercell marker">
-										<div class="tg-quartermarker"></div>
-										<div class="tg-quartermarker"></div>
-									</div>
-									
+
 									<div class="tg-markercell marker">
 										<div class="tg-quartermarker"></div>
 										<div class="tg-quartermarker"></div>
 									</div>
 
-									
-									
+									<div class="tg-markercell marker-limit">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker-limit">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+
+									<div class="tg-markercell marker-limit">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker-limit">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker-limit">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+									<div class="tg-markercell marker">
+										<div class="tg-quartermarker"></div>
+										<div class="tg-quartermarker"></div>
+									</div>
+
+
+
 								</div>
 							</div><div class="tg-spanningwrapper tg-chipspanningwrapper" id="tgspanningwrapper"></div></td>
 						</tr>
 						<tr>
 							<td class="tg-times-pri">
-							
-							
+
+
 							{% for daypart in dayparts %}
 							<div class="daypart" style="height:{{ daypart.duration|multiply:pph }}px;">
 								<div class="tg-time-pri {% if forloop.last %}tg-time-pri-last{% endif %}" style="height:{{ daypart.duration|multiply:pph }}px;">
-									
+
 									{{ daypart.time_start|time:"H" }} - {{ daypart.time_end|time:"H" }}
 								</div>
-								
+
 								<div class="tt-content" style="display: none;">
 									<h4 style="color: white;">{{ daypart.name }} <small class="pull-right">{{ daypart.time_start|time:"H" }} - {{ daypart.time_end|time:"H" }}</small></h4>
-									
+
 									{% if daypart.mood %}
 									<div class="mood">
 										<div class="row-fluid">
@@ -221,20 +241,20 @@
 										</div>
 									</div>
 									{% endif %}
-									
+
 								</div>
-								
-							</div>	
-							
+
+							</div>
+
 							{% endfor %}
-							
-							
-							<!--	
+
+
+							<!--
 							<div style="height:252px;">
 								<div class="tg-time-pri {% if forloop.last %}tg-time-pri-last{% endif %}" style="height:251px;">
 									24-06
 								</div>
-							</div>	
+							</div>
 							<div style="height:42px;">
 								<div class="tg-time-pri {% if forloop.last %}tg-time-pri-last{% endif %}" style="height:41px;">
 									06-07
@@ -246,33 +266,33 @@
 								</div>
 							</div>
 							-->
-							
-							
+
+
 							<div class="current-time-arrow" style="left: 0px; top: 487px;"></div></td>
-							
+
 							{% for date in days %}
 							<td class="tg-col{% if date == today %}-today{% endif %} day" id="day_{{ date|date:"Y-m-d" }}">
-								
+
 								{% if date == today %}
 								<div class="tg-today" style="height:1008px;margin-bottom:-1008px;">&nbsp;</div>
 								{% endif %}
-								
+
 								<div class="tg-col-eventwrapper" style="height:1008px;margin-bottom:-1008px;">
-									
+
 									<div class="tg-gutter">
-										
+
 									</div>
-									
+
 								</div>
 								<div class="tg-col-overlaywrapper">
-									
+
 									<div class="current-time-marker{% if date == today %} today{% endif %}" style="top: 273px;"> </div>
-									
+
 								</div>
 							</td>
 							{% endfor %}
-							
-							
+
+
 						</tr>
 					</tbody>
 				</table>
